WKWebView false positive when testing a.relList.supports("ar"), fails to open USDZ in AR QuickLook https://bugs.webkit.org/show_bug.cgi?id=239135 <rdar://problem/91798041>

Reviewed by Tim Horton.

Source/WebCore:

Only return "true" for a.relList.supports("ar") when the SystemPreviewEnabled setting is "true".

Tests: system-preview/rel-ar-setting-disabled.html
       system-preview/rel-ar-setting-enabled.html

* html/HTMLAnchorElement.cpp:
(WebCore::HTMLAnchorElement::relList):

LayoutTests:

Add tests to check a.relList.supports("ar") returns the expected value based on
the SystemPreviewEnabled setting value.

* system-preview/rel-ar-setting-disabled-expected.txt: Added.
* system-preview/rel-ar-setting-disabled.html: Added.
* system-preview/rel-ar-setting-enabled-expected.txt: Added.
* system-preview/rel-ar-setting-enabled.html: Added.

Canonical link: https://commits.webkit.org/249690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292923 268f45cc-cd09-0410-ab3c-d52691b4dbfc